For convenience, anything Psr can be placed in this package, rather than just being the single Psr7 adapter

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "secureheaders/psr7adapter",
+    "name": "secureheaders/psradapter",
     "description": "SecureHeaders Psr7 Http Adapter",
     "keywords": [
         "secureheaders",
@@ -16,12 +16,12 @@
     },
     "autoload": {
         "psr-4": {
-            "SecureHeaders\\Psr7HttpAdapter\\": "src/"
+            "SecureHeaders\\PsrHttpAdapter\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "SecureHeaders\\Psr7HttpAdapter\\Tests\\": "tests/"
+            "SecureHeaders\\PsrHttpAdapter\\Tests\\": "tests/"
         }
     },
     "license": "MIT"
