--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "type": "library",
     "require": {
         "aidantwoods/secureheaders": "^2.0",
-        "psr/http-message": "^1.0"
+        "psr/http-message": "^1.0",
+        "psr/http-server-middleware": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0",
