--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     ],
     "type": "library",
     "require": {
+        "php": ">=7.0",
         "aidantwoods/secureheaders": "^2.0",
         "psr/http-message": "^1.0",
         "psr/http-server-middleware": "^1.0"
