--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "psr/http-server-middleware": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.0",
+        "phpunit/phpunit": "^6.5||^8.0",
         "zendframework/zend-diactoros": "^1.0"
     },
     "autoload": {
